fixing overflow

--- a/react_frontend/src/App.css
+++ b/react_frontend/src/App.css
@@ -58,7 +58,7 @@ h1 {
   border-radius: 4rem;
   text-align: center;
   margin: 6rem;
-  height:90vh;  
+  height:80vh;  
 }
 
 .header {
